# FPSGame

./: CMakeLists.txt  imgui.ini
assets/shaders/: scene.glsl
src/: Application.cpp
src/Renderer/: Renderer.cpp
src/Renderer/objs/: Mesh.cpp  Mesh.h  Model.cpp  Texture.cpp
